--- a/styles/index.css
+++ b/styles/index.css
@@ -80,6 +80,7 @@ main {
   font-weight: 300;
   font-size: 1rem;
   text-align: justify;
+  word-break: break-all;
 }
 
 .text-container h2 {
